blocks/form.css
.form {
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
}

.form > fieldset {
  max-width: 385px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border: none;
  padding: 0;
  position: absolute;
  bottom: 120px;
  transform: translateY(100px);
}

.form__label {
  padding-bottom: 8px;
  align-self: flex-start;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
}

.form__item {
  width: 385px;
  height: 60px;
  padding: 15px;
  box-sizing: border-box;
  margin-bottom: 32px;
  border-radius: 5px;
}

input[type="number"] {
  width: 385px;
}

input[type="checkbox"] {
  width: 20px;
  height: 20px;
  display: inline-block;
}

.form__item::placeholder {
  font-size: 20px;
}

.form__submit {
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  width: 385px;
  height: 60px;
  margin-bottom: 32px;
  color: #fff;
  background: #2f80ed;
  border: none;
  border-radius: 5px;
}

.form__submit:hover {
  opacity: 0.7;
  cursor: pointer;
}

